--- a/HPC_Hw2.tex
+++ b/HPC_Hw2.tex
@@ -68,7 +68,7 @@
 \vskip0.25cm
 \vskip0.25cm
 
-All the programs are proceed on \begin{verbatim}11th Gen Intel(R) Core(TM) i7-1195G7 @ 2.90GHz ~ 2.92 GHz  RAM 32 GB \end{verbatim}
+All the programs are run on \begin{verbatim}11th Gen Intel(R) Core(TM) i7-1195G7 @ 2.90GHz ~ 2.92 GHz  RAM 32 GB \end{verbatim}
 \begin{enumerate}
 \item Problem 1 Finding Memory Bugs
 \begin{enumerate}
@@ -123,7 +123,7 @@ We remove the barrier \begin{verbatim}#pragma omp barrier \end{verbatim}
 because two threads will not reach this barrier to avoid the infinite wait.
 \item omp4
 \\ \\
-We shrink $N$ from 1024 to 256 to fulfill the smallstack size limit.
+We shrink $N$ from 1024 to 256 to fulfill the small stack size limit.
 \item omp5
 \\ \\
 We switch the lock/unlock order of $locka$ and $lockb$ so the two sections share the same lock/unlock order.
